# kavachAI

./: .gitignore  README.md  context.txt  html_file_temp.html  llm.py  main.py  pyproject.toml  test_whisper.py
Note/: SQL_agent_walkthrough.txt
RAG/data_processing/: chunker.py
RAG/embeddings/: embedder.py  vector_store.py
agent/: SQLExcel_report_agent.py  test_sql_agent.py
app/: router.py
app/api/: CV_parser.py  chat_with_file.py  excel_report.py  file_data_extraction.py  image_generation.py  voice_conversation.py  youTube_chat.py
db/: connection.py  excelDB.py
llm/: base.py  faster_whisper.py  wisper_model.py
pipeline/: code_extraction.py  home_chat_data_extraction.py
schemas/: CV_Schema.py
services/: CV_parsing_chain.py  Home_page_chain.py  chat_with_file_chain.py  data_extraction.py  excel_report_chain.py  image_generation_chain.py  qa_response_ollama.py  youTube_chat_chain.py
utils/: token_limites.py
websocket/: websocket_ping.py
